Bug 295186 - Can't hide star rating from info box
Summary: Can't hide star rating from info box
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Viewer (other bugs)
Version First Reported In: GIT master
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-01 23:57 UTC by Risto H. Kurppa
Modified: 2012-04-25 04:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Risto H. Kurppa 2012-03-01 23:57:04 UTC
Run kphotoalbum --demo
Double click an image to open it in viewer
Press 2 to give the image rating of 2(stars).
The stars will be visible in the info box.
Right mouse click on image -> show
The option to hide the rating from showing in the info box is missing.
Comment 1 Miika Turkia 2012-04-25 04:26:28 UTC
Git commit a72713f6824ffa7efa18c17e9298dd03d1a2d559 by Miika Turkia.
Committed on 25/04/2012 at 06:24.
Pushed by mturkia into branch 'master'.

Toggle showing of rating on Viewer InfoBox

Added possibility to toggle on or off the viewing of rating in InfoBox
in Viewer.

M  +1    -0    Settings/SettingsData.cpp
M  +1    -0    Settings/SettingsData.h
M  +2    -1    Utilities/Util.cpp
M  +12   -0    Viewer/VisibleOptionsMenu.cpp
M  +2    -0    Viewer/VisibleOptionsMenu.h

http://commits.kde.org/kphotoalbum/a72713f6824ffa7efa18c17e9298dd03d1a2d559