Toggle showing of rating on Viewer InfoBox

Added possibility to toggle on or off the viewing of rating in InfoBox
in Viewer.

BUG: 295186